Finishin up the code, mapping, error responses